[package]
name = "laza"
edition = "2024"
categories = ["cryptography"]
homepage = "https://kanari.network"
documentation = "https://docs.rs/laza"
version = "0.2.2"
authors = ["Kanari Network"]
license = "Apache-2.0"
repository = "https://github.com/kanari-network/laza-hash"
description = "Kanari Network Cryptographic Hashing Library"

[features]
default = ["parallel"]  # Enable parallel by default
simd = [] # Add SIMD feature flag
parallel = ["rayon"]

[dependencies]
# Cryptography
# crypto = "0.5.1"
# digest = "0.10.7"
# sha2 = "0.10.8"
blake3 = "1.5.3"
criterion = "0.5.1"
# hex = "0.4.3"
# secp256k1 = { version = "0.30.0", features = ["rand"] }
# chacha20poly1305 = "0.10.1"
# argon2 = "0.5.3"
sys-info = "0.9.1"

rand = "0.8.5"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
sha2 = "0.10.8"
rayon = { version = "1.10.0", optional = true }
crossbeam = { version = "0.8.0", optional = true }

[profile.bench]
debug = true
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
split-debuginfo = "unpacked"

[profile.ci]
inherits = "test"
debug = 0
incremental = false
codegen-units = 16
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false